# pdsa-project

./: .gitignore  README.md
backend/: database.py  db_dump.sql  main.py  models.py  pyproject.toml
backend/algorithms/: greedy.py  hungarian.py
backend/scripts/: populate_db_playwright.py
backend/tests/: test_algorithms.py
docs/: COURSEWORK.md
docs/report/group/: group_report.tex
docs/report/individual/: individual_report_adithya.tex
frontend/: package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AlgoAnimation.jsx  AlgoAnimation.module.css  GameMenu.jsx  GameMenu.module.css  MinimumCost.jsx  MinimumCost.module.css  ResultsDisplay.jsx  ResultsDisplay.module.css  TimingChart.jsx  UserNameModal.jsx  UserNameModal.module.css
