[project]
name = "pdsa-backend"
version = "0.1.0"
description = "PDSA Minimum Cost Assignment Game — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
